<resources>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="app_name">Store Keeper</string>
    <string name="welcome">Welcome</string>
    <string name="logintext">Please login to continue</string>
    <string name="searchtext">Search....</string>
    <string name="addtext">Add a new product</string>
    <string name="takepic">Take a photo</string>
    <string name="uploadgallery">Upload from gallery</string>
    <string name="goods">Goods</string>
    <string name="billing">Billing</string>
    <string name="pnamehint">Product Name</string>
    <string name="cphint">Cost Price</string>
    <string name="sphint">Selling Price</string>
    <string name="expiryhint">Expiry(Months)</string>
    <string name="stockhint">Stock Available</string>
    <string name="mfdhint">"Manufacturing Date (YYYY-MM-DD) "</string>
    <string name="codehint">Scan or Enter Barcode number</string>
    <string name="addButton">Add To Stores</string>
    <string name="scan">Scan</string>
    <string name="enter_number">Enter Number</string>
    <string name="products_in_cart">Products in cart</string>
    <string name="add_product">Add Product</string>
    <string name="check_out">Cart</string>
    <string name="add_to_credit">Add To Credit</string>
    <string name="enter_barcode">Enter Barcode</string>
    <string name="selectoption">Select appropriate option to give code</string>
    <string name="grams">Enter in grams</string>
    <string name="sq">Select Quantity</string>
    <string name="add">Add</string>
    <string name="inefficientstock">Require Amount Of Stock Not Available</string>
    <string name="errorunitnumber">Enter number of units</string>
    <string name="errorunitgram">Enter grams</string>
    <string name="validcode">Input  the valid code</string>
    <string name="networklow">Network speed is  slow, can\'t load the data</string>
    <string name="remove">Remove</string>
    <string name="removed">"Product Removed Successfully "</string>
    <string name="deletestring">"Are you sure do you want to remove  "</string>
    <string name="deltitle">Removing cart item</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="total_billing">Total Billing</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="progressTitle">Adding Product To Inventory</string>
    <string name="no_products_cart">Please add products to checkout</string>
    <string name="enter_password">Enter Password</string>
    <string name="menu">Main Menu</string>
    <string name="home">Home</string>
    <string name="Cart">Cart</string>
    <string name="transactions">Transactions</string>
    <string name="creditors">Creditors</string>

    <string-array name="units_array">
        <item>Select Units</item>
        <item>KG</item>
        <item>Number</item>
    </string-array>
    <string-array name="cat_array">
        <item>All</item>
        <item>Flour</item>
        <item>Pulses</item>
        <item>Snacks</item>
        <item>Rawa</item>
        <item>Soaps</item>
        <item>Choclate</item>
        <item>Oil</item>
        <item>Oats</item>
        <item>Biscuit</item>
        <item>Shampoo</item>
        <item>Detergant Powder</item>
        <item>Skin Care</item>
        <item>Beverage</item>
        <item>Tea Powder</item>
        <item>Spices</item>
        <item>Masala</item>
        <item>Beverages</item>
        <item>Milk Products</item>
        <item>Cigerete</item>
        <item>Home Sanitizers</item>
        <item>Brushes</item>
        <item>Stationery</item>
        <item>Vegetables</item>
        <item>Broom Sticks</item>
        <item>Worship Material</item>
        <item>Others</item>

    </string-array>
    <string name="rupee">\u20B9</string>
    <string name="title_activity_creditors">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="creditor_Add">Creditor added</string>
    <string name="error_creditor_add">Creditor name already exist</string>
    <string name="adding_to_creditor">Adding to creditor</string>
    <string name="add_new_creditor">Add new creditor</string>
    <string name="credit">Credit</string>
    <string name="deleteproductstring">Are you sure do you want to delete product ?</string>
    <string name="tprofit">"Total Profit : "</string>
    <string name="share">Share</string>


</resources>