<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="#FAFAFB"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="#34A1F8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:text="@string/app_name"
            android:textSize="70dp"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@android:color/white"
            android:fontFamily="cursive"
            android:layout_height="wrap_content">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:text="the manager"
            android:textColor="@color/black"
            android:layout_marginLeft="220dp"
            android:textSize="25dp"
            android:fontFamily="cursive"
            android:layout_height="wrap_content">

        </TextView>

    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="25dp"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="290dp"
        android:background="@drawable/login_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="80dp"
                android:src="@drawable/bulb"
                android:layout_height="70dp">

            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:text="@string/welcome"
                android:textSize="35dp"
                android:textStyle="bold"
                android:layout_marginTop="14dp"
                android:textColor="@color/black"
                android:fontFamily="cursive"
                android:layout_height="wrap_content">

            </TextView>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:text="@string/logintext"
            android:layout_marginTop="100dp"
            android:textSize="20dp"
            android:fontFamily="cursive"
            android:layout_marginLeft="130dp"
            android:layout_height="wrap_content">

        </TextView>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="match_parent"
            android:layout_marginTop="180dp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:layout_height="wrap_content" />



    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>

